<resources>
    <string name="app_name">Etraction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ustawienia</string>


    <!--Drawer-->
    <string name="drawer_menu_localization">Lokalizacja</string>
    <string name="drawer_menu_statements">Komunikaty</string>
    <string name="drawer_menu_movies">Filmy</string>
    <string name="drawer_menu_cameras">Kamery</string>
    <string name="drawer_menu_group_community">Społeczność</string>
    <string name="drawer_menu_chat">Chat</string>
    <string name="drawer_menu_user_movies">Filmiki</string>
    <string name="drawer_menu_restaurant_menu">Menu</string>

    <!-- TABS -->
    <string name="user_own_videos_tab">Moje nagrania</string>
    <string name="users_videos_tab">Wszystkie</string>

    <!--    Permissions    -->
    <string name="location_permission_denied">Aplikacja wymaga pozwolenia na lokalizację aby wskazać położenie urządzenia na mapie. Spróbuj ponownie i zezwól na lokalizację by w pełni korzystać z aplikacji.\nJeśli uprawnienie zostało odebrane na stałe, może zostać przywrócone w ustawieniach systemu (Ustawienia &gt; Aplikacje &gt; eTraction</string>
    <string name="permission_required_toast">Uprawnienie do lokalizacji urządzenia jest wymagane.</string>
    <string name="permission_required_read_storage_toast">Uprawnienie do odczytu pamięci masowej urządzenia jest wymagane w celu dostępu do nagranych filmów.</string>

    <!-- Errors -->
    <string name="generic_error_msg">Wystąpił błąd komunikacji. Proszę spróbować później.</string>
    <string name="cant_resolve_intent">Brak programu do obsługi wideo.</string>
    <string name="settings_nickname_exists_error_msg">Wybrana nazwa użytkownika jest już zajęta. \nProszę wybrać inną.</string>
    <string name="nickname_empty">Należy najpierw ustawić nazwę użytkownika w ustawieniach aplikacji.</string>

    <string name="notification_bundle_frag_key" translatable="false">frag</string>

    <string name="movie_hour">godz.</string>
    <string name="movie_min">min.</string>

    <string name="localizatoin_arrival">Przyjazd</string>
    <string name="localizatoin_departure">Odjazd</string>

    <string name="pref_nickname_key" translatable="false">pref_nickname.</string>
    <string name="pref_nickname_label">Nazwa użytkownika</string>

    <string name="settings_nickname_saving">Zapisywanie danych na serwer...</string>
    <string name="chat_hint">Wpisz wiadomość...</string>

    <string name="chat_notification_title">ETraction - nowe wiadomości</string>
    <string name="chat_notification_text">Pojawiły się nowe wiadomości na czacie. Sprawdź!</string>
    <string name="statements_notification_title">ETraction - komunikat!</string>
    <string name="statements_notification_text">Nowy komunikat</string>

    <string name="user_video_remove_confirmation">Film usunięty</string>

    <string name="menu_delete">Usuń</string>
</resources>
