<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_localization"
            android:icon="@drawable/ic_menu_place"
            android:title="@string/drawer_menu_localization" />
        <item
            android:id="@+id/nav_statements"
            android:icon="@drawable/ic_menu_statement"
            android:title="@string/drawer_menu_statements" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movies"
            android:title="@string/drawer_menu_movies" />
        <item
            android:id="@+id/nav_cameras"
            android:icon="@drawable/ic_menu_cameras"
            android:title="@string/drawer_menu_cameras" />

        <item
            android:id="@+id/nav_restaurant_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/drawer_menu_restaurant_menu" />
    </group>

    <item android:title="@string/drawer_menu_group_community">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_menu_chat"
                    android:title="@string/drawer_menu_chat" />

                <item
                    android:id="@+id/nav_user_movies"
                    android:icon="@drawable/ic_user_movies"
                    android:title="@string/drawer_menu_user_movies" />
            </group>
        </menu>
    </item>

</menu>
